{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 12,
  "lineage": "8bc31311-4bb7-03fc-f951-60d70bcacb21",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214743469339:internet-gateway/igw-00326ffb421b9a544",
            "id": "igw-00326ffb421b9a544",
            "owner_id": "214743469339",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-049c34b2901a07c1d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00326ffb421b9a544",
            "id": "r-rtb-09f4a1ec346b99cd11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-09f4a1ec346b99cd1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "214743469339",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-09f4a1ec346b99cd1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214743469339:route-table/rtb-09f4a1ec346b99cd1",
            "id": "rtb-09f4a1ec346b99cd1",
            "owner_id": "214743469339",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-049c34b2901a07c1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "214743469339",
            "id": "rtb-09f4a1ec346b99cd1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0519650c2507e48d8",
            "region": "us-east-1",
            "route_table_id": "rtb-09f4a1ec346b99cd1",
            "subnet_id": "subnet-06f145db55d9cedbc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214743469339:security-group/sg-0cebd2836f9e14150",
            "description": "Allow SSH and app port from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cebd2836f9e14150",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "App port 3000 from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-app-sg",
            "name_prefix": "",
            "owner_id": "214743469339",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-049c34b2901a07c1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "214743469339",
            "id": "sg-0cebd2836f9e14150",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214743469339:security-group/sg-0f2c97598be2ef528",
            "description": "Allow SSH from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2c97598be2ef528",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-bastion-sg",
            "name_prefix": "",
            "owner_id": "214743469339",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-bastion-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-049c34b2901a07c1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "214743469339",
            "id": "sg-0f2c97598be2ef528",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214743469339:subnet/subnet-02ff7f453b5270615",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ff7f453b5270615",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "214743469339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-049c34b2901a07c1d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "214743469339",
            "id": "subnet-02ff7f453b5270615",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214743469339:subnet/subnet-06f145db55d9cedbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f145db55d9cedbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "214743469339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-049c34b2901a07c1d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "214743469339",
            "id": "subnet-06f145db55d9cedbc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214743469339:vpc/vpc-049c34b2901a07c1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ee51f48e879dad30",
            "default_route_table_id": "rtb-0ff8e568281e88289",
            "default_security_group_id": "sg-06ac6fe809dbe0fba",
            "dhcp_options_id": "dopt-0aaba7f3993931986",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049c34b2901a07c1d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ff8e568281e88289",
            "owner_id": "214743469339",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "214743469339",
            "id": "vpc-049c34b2901a07c1d",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}